[package]
name = "vert"
version = "0.1.0"
authors = ["Daniel Bergey <bergey@teallabs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.1"

[target.'cfg(unix)'.dependencies]
termios = "0.3.1"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.7", features = [ "winbase", "wincon" ] }